--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                     <navigationItem key="navigationItem" title="Journal" largeTitleDisplayMode="always" id="jWk-jN-Xn7">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="zn9-rC-Z64">
                             <connections>
-                                <segue destination="fVo-05-3q6" kind="presentation" identifier="AddJoutnalEntrySegue" modalPresentationStyle="fullScreen" id="bvE-FM-7SJ"/>
+                                <segue destination="fVo-05-3q6" kind="presentation" identifier="AddJournalEntrySegue" modalPresentationStyle="fullScreen" id="bvE-FM-7SJ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -78,7 +78,7 @@
             </objects>
             <point key="canvasLocation" x="1010.144927536232" y="157.36607142857142"/>
         </scene>
-        <!--Entry Detail View Controller-->
+        <!--Title-->
         <scene sceneID="WBY-Tr-aeh">
             <objects>
                 <viewController id="fVo-05-3q6" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -87,12 +87,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0BZ-7I-zUh">
-                                <rect key="frame" x="20" y="88" width="374" height="49"/>
+                                <rect key="frame" x="20" y="44" width="374" height="49"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9Fa-jU-OvI">
-                                <rect key="frame" x="20" y="145" width="374" height="717"/>
+                                <rect key="frame" x="20" y="101" width="374" height="712"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -111,17 +111,17 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dX5-rS-frT"/>
                     </view>
-                    <navigationItem key="navigationItem" id="V6e-rF-uZC">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Bud-lJ-6uv">
+                    <toolbarItems>
+                        <barButtonItem systemItem="save" id="gEd-LF-IGe">
                             <connections>
-                                <action selector="saveTapped:" destination="fVo-05-3q6" id="5aw-Tw-d2Z"/>
+                                <action selector="saveTapped:" destination="fVo-05-3q6" id="TyI-bh-pzz"/>
                             </connections>
                         </barButtonItem>
-                    </navigationItem>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="Title" id="hOz-vK-ttp"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="descriptionTextField" destination="9Fa-jU-OvI" id="XPu-3O-9M9"/>
-                        <outlet property="entryDescriptionText" destination="9Fa-jU-OvI" id="7Hh-v1-rrw"/>
-                        <outlet property="entryTitleLabel" destination="0BZ-7I-zUh" id="ySo-i4-T8O"/>
                         <outlet property="titleTextField" destination="0BZ-7I-zUh" id="8tk-an-QFl"/>
                     </connections>
                 </viewController>
@@ -149,6 +149,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="OfB-7j-wpR"/>
+        <segue reference="bvE-FM-7SJ"/>
     </inferredMetricsTieBreakers>
 </document>
